dnl AUTOCONF configuration for AVCALL
dnl Bruno Haible 2000-04-02
dnl Sam Steingold 2008-2009
dnl
AC_INIT(libffcall/avcall,m4_normalize(m4_esyscmd([cat ../VERSION])))
AC_CONFIG_SRCDIR(avcall.h.in)
AC_CONFIG_HEADERS([config.h avcall.h])
AC_CONFIG_FILES(Makefile)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
CL_CC_GCC
CL_AS_UNDERSCORE
AC_PROG_RANLIB
AC_PROG_MAKE_SET
AC_CONFIG_AUX_DIR(../build-aux)
AC_PROG_INSTALL
CL_PROG_LN
FFCALL_CANONICAL_HOST_CPU
PACKAGE=avcall
FFCALL_COMMON_LIBTOOL
FFCALL_PCC_STRUCT_RETURN
FFCALL_SMALL_STRUCT_RETURN
FFCALL_IREG_FLOAT_RETURN
AC_TYPE_LONG_LONG_INT
AC_OUTPUT
